--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./images/favicon/icon.png" type="image/png">
+    <link rel="icon" href="./images/favicon/icon-1.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shuls - Batalla en Mazamari</title>
     <meta name="description"
