--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./images/favicon/icon-1.png" type="image/png">
+    <link rel="icon" href="./images/favicon/icon-5.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shuls - Batalla en Mazamari</title>
     <meta name="description"
@@ -20,7 +20,11 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
 
-
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-icon" href="./images/favicon/icon-5.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/icon-5.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/icon-6.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="./images/favicon/icon-7.png">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
